# gleamlm

./: .gitignore  .pre-commit-config.yaml  CODE_STANDARDS.md  CONTEXT.md  LICENSE  README.md  gleamlm_dataset.py  gleamlm_dpo.py  gleamlm_infer.py  gleamlm_quantize.py  gleamlm_sft.py  gleamlm_train.py  pyproject.toml  quick_test_sft_dpo.py  xfind_dataset.py  xfind_dpo.py  xfind_infer.py  xfind_quantize.py  xfind_sft.py  xfind_train.py
.github/workflows/: publish.yml
configs/: base.yaml  lite.yaml  nano.yaml  pro.yaml
data_tools/: _api_client.py  _sft_seeds.py  _sft_templates.py  build_dataset.py  clean_sft.py  clean_sft_data.py  clean_text.py  dedup_text.py  download_data.py  extract_parquet.py  filter_qa.py  gen_dpo_rejected.py  gen_longform_sft.py  gen_multiturn_sft.py  gen_sft.py  generate_rejected.py  generate_rejected_multiturn.py  generate_sft_data.py  prepare_data.py  score_quality.py
data_tools/dpo/: generate_rejected.py
data_tools/pretrain/: build.py  pipeline.py  score.py  truncate_news.py
data_tools/sft/: _templates.py  clean_format.py  generate.py  generate_longform.py  generate_multiturn.py
docs/: GleamLM排坑记录.md
evaluation/: generate_samples.py  perplexity.py
experimental/: gleamlm_hf_fixed.py
gleamlm/: __init__.py  preprocess.py  types.py
gleamlm-0.2.0/gleamlm-lite/: .gitignore
gleamlm-0.2.1.dev1+ge6ef5aa1f/: .gitignore
gleamlm-lite/: dpo.py  infer.py  sft.py  train.py
gleamlm-lite/tests/: smoke_test.py
gleamlm-nano/: dpo.py  infer.py  quantize.py  quick_test_sft_dpo.py  sft.py  train.py
gleamlm-nano/evaluation/: generate_samples.py  perplexity.py
gleamlm-nano/tests/: _run_tests.py  smoke_test.py  test_dataset.py  test_model.py  test_tokenizer.py
gleamlm-pro/: .gitignore  dpo.py  infer.py  quantize.py  sft.py  test_train.py  train.py
gleamlm-pro/evaluation/: generate_samples.py  perplexity.py
gleamlm-pro/tests/: _run_tests.py  smoke_test.py  test_dataset.py  test_model.py
gleamlm/dataset/: dataset.py
gleamlm/deploy/: export.py  quantize.py
gleamlm/evaluation/: __init__.py  benchmark.py  knowledge.py  ppl.py  runner.py
gleamlm/inference/: __init__.py  chatml.py  cli.py  conversation.py  generate.py  generator.py  sampler.py  streamer.py
gleamlm/models/: config.py  model.py
gleamlm/preprocessing/: build_dataset.py  clean_text.py  dedup_text.py  filter_qa.py  mix_split.py
gleamlm/tokenizer/: tokenizer.py
gleamlm/tokenizer/checkpoints/bbpe_12k/: bbpe_tokenizer.json
gleamlm/training/: base_trainer.py  dpo_trainer.py  sft_trainer.py
gleamlm/utils/: __init__.py  config.py  logging.py  torch_utils.py
inference/: sampler.py  streamer.py
models/: __init__.py  gleamlm_config.py  gleamlm_model.py  xfind_config.py  xfind_model.py
scripts/: _check_fanti.py  _check_stats.py  _read_tb.py  check_ckpt.py  clean_sft_data.py  dpo.py  eval_knowledge.py  eval_layer_dropout.py  eval_ppl.py  generate_rejected.py  generate_sft_data.py  infer.py  quick_run.py  sft.py  train.py  verify_both.py  verify_lite.py  verify_paths.py
tests/: conftest.py  test_dataset.py  test_evaluation.py  test_model.py  test_sampler.py  test_smoke.py  test_tokenizer.py  test_utils.py  test_utils_config.py  verify_flash_attn.py
tokenizer/: bbpe_tokenizer.py  xfind_tokenizer.py
tools/: _check_fanti.py  _check_stats.py  build_dataset.py  clean_text.py  dedup_text.py  download_data.py  download_v3_data.py  eval_ppl.py  filter_qa.py  verify_paths.py
