[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gleamlm"
dynamic = ["version"]
description = "GleamLM — A lightweight language model for education and research"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Fei Zhang", email = "philex_hf@163.com"},
]
keywords = ["llm", "language-model", "transformer", "chinese", "educational", "pretraining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
    "tqdm>=4.64",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "tensorboard>=2.14",
]
dev = [
    "pytest",
    "tensorboard>=2.14",
    "ruff>=0.15",
    "mypy>=2.0",
    "pre-commit>=4.0",
]
data = [
    "pandas",
    "pyarrow>=10.0",
    "fastparquet",
]
tools = [
    "zhconv",
]
quality = [
    "openai>=1.0",
    "fasttext-wheel>=0.9",
]

[project.urls]
Homepage = "https://github.com/philexohf/gleamlm"
Repository = "https://github.com/philexohf/gleamlm"

[tool.setuptools.packages.find]
include = ["gleamlm", "gleamlm.*"]

[tool.setuptools.package-data]
gleamlm = ["tokenizer/checkpoints/bbpe_12k/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["gleamlm-lite", "gleamlm-pro"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "N812",  # lowercase-to-non-lower (PyTorch `F` convention)
    "N806",  # non-lowercase var (Q/K/V in attention, ML convention)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports
"gleamlm-nano/tests/_run_tests.py" = ["E402"]  # path setup before imports
"gleamlm-nano/train.py" = ["E402"]  # path setup before imports
"gleamlm-nano/sft.py" = ["E402"]  # path setup before imports
"gleamlm-nano/dpo.py" = ["E402"]  # path setup before imports
"gleamlm-nano/infer.py" = ["E402"]  # path setup before imports
"gleamlm-nano/quick_test_sft_dpo.py" = ["E402", "E701", "E702"]  # quick smoke test script
"scripts/eval_ppl.py" = ["E402"]  # path setup before imports
"scripts/eval_knowledge.py" = ["SIM115"]  # stdout redirect
"scripts/eval_layer_dropout.py" = ["SIM115"]  # stdout redirect
"scripts/_check_stats.py" = ["E741"]  # list comprehension
"tests/test_tokenizer.py" = ["SIM115"]  # NamedTemporaryFile manual cleanup
"tests/verify_flash_attn.py" = ["E741"]  # loss loop variable
"data_tools/extract_parquet.py" = ["F401", "B018"]  # availability probe
"data_tools/prepare_data.py" = ["B007"]  # enumerate src iteration
"gleamlm/utils/config.py" = ["N806"]  # NO_PREFIX convention

[tool.ruff.lint.isort]
known-first-party = ["gleamlm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
exclude = [
    "gleamlm-nano/",
    "gleamlm-lite/",
    "gleamlm-pro/",
    "scripts/",
    "data_tools/",
    "tests/",
    "configs/",
]

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
