[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gleamlm"
dynamic = ["version"]
description = "GleamLM — A lightweight language model for education and research"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Fei Zhang", email = "philex_hf@163.com"},
]
keywords = ["llm", "language-model", "transformer", "chinese", "educational", "pretraining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
    "tqdm>=4.64",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "tensorboard>=2.14",
]
dev = [
    "pytest",
    "pytest-cov",
    "tensorboard>=2.14",
    "ruff>=0.15",
    "mypy>=2.0",
    "pre-commit>=4.0",
]
data = [
    "pandas",
    "pyarrow>=10.0",
    "fastparquet",
]
tools = [
    "zhconv",
    "safetensors>=0.4",
]
quality = [
    "openai>=1.0",
    "fasttext-wheel>=0.9",
]

[project.urls]
Homepage = "https://github.com/philexohf/gleamlm"
Repository = "https://github.com/philexohf/gleamlm"

[tool.setuptools.packages.find]
include = ["gleamlm", "gleamlm.*"]

[tool.setuptools.package-data]
gleamlm = ["tokenizer/checkpoints/bbpe_12k/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = []

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "N812",  # lowercase-to-non-lower (PyTorch `F` convention)
    "N806",  # non-lowercase var (Q/K/V in attention, ML convention)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports
"tools/eval_ppl.py" = ["E402"]  # path setup before imports
"tools/eval_knowledge.py" = ["SIM115"]  # stdout redirect
"tools/eval_layer_dropout.py" = ["SIM115"]  # stdout redirect
"tests/test_tokenizer.py" = ["SIM115"]  # NamedTemporaryFile manual cleanup
"tests/verify_flash_attn.py" = ["E741"]  # loss loop variable
"data_tools/pretrain/extract_parquet.py" = ["F401", "B018"]  # availability probe
"data_tools/pretrain/pipeline.py" = ["B007"]  # enumerate src iteration
"data_tools/sft/generate.py" = ["E402"]  # sys.path before data_tools imports
"data_tools/sft/generate_longform.py" = ["E402"]  # sys.path before data_tools imports
"data_tools/sft/generate_multiturn.py" = ["E402"]  # sys.path before data_tools imports
"data_tools/pretrain/score.py" = ["E402"]  # sys.path before data_tools imports
"gleamlm/utils/config.py" = ["N806"]  # NO_PREFIX convention

[tool.ruff.lint.isort]
known-first-party = ["gleamlm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
exclude = [
    "experimental/",
    "tools/",
    "data_tools/",
    "tests/",
    "configs/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
